<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollViewSort"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="kutuphane.com.kutuphane.SortActivity"
        android:background="@color/colorBackground"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp">

        <ImageButton
            android:id="@+id/imageButtonSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_alignParentEnd="true"/>

        <RelativeLayout
            android:id="@+id/relativeLayoutSort1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainTextColor"
                android:text="@string/sort_sirala"/>

            <RadioGroup
                android:id="@+id/radioGroupSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_below="@+id/textViewSort">

                <RadioButton
                    android:id="@+id/radioButtonSort1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:text="@string/sort_radioButton1"
                    android:buttonTint="@color/radioButtonColor"/>

                <RadioButton
                    android:id="@+id/radioButtonSort2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:text="@string/sort_radioButton2"
                    android:buttonTint="@color/radioButtonColor"/>

                <RadioButton
                    android:id="@+id/radioButtonSort3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainTextColor"
                    android:text="@string/sort_radioButton3"
                    android:buttonTint="@color/radioButtonColor"/>

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutSortSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayoutSort1">

            <TextView
                android:id="@+id/textViewSortSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/mainTextColor"
                android:text="@string/sort_switch1"
                android:padding="3dp"
                android:gravity="center"/>

            <Switch
                android:id="@+id/switchSort1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/SwitchTheme"
                android:layout_toEndOf="@+id/textViewSortSwitch1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/mainTextColor"
                android:text="@string/sort_switch2"
                android:padding="3dp"
                android:layout_toEndOf="@+id/switchSort1"
                android:gravity="center"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutSortRecyclerViewType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/relativeLayoutSortSwitch"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/textViewSortRecyclerViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainTextColor"
                android:text="@string/sort_recyclerViewType"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:gravity="center"/>

            <CheckBox
                android:id="@+id/checkBoxRecyclerViewType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector1"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/textViewSortRecyclerViewType"/>

            <CheckBox
                android:id="@+id/checkBoxRecyclerViewType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector2"
                android:padding="10dp"
                android:layout_toEndOf="@+id/checkBoxRecyclerViewType1"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>