<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="layout.Kitaplar"
             android:background="@color/colorBackground">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_viewKitaplar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewKitapYokKitaplar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/fragment_kitap_yok"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutKitaplarUyari"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewUyariKitaplar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kutuphane_internet_yok"
            android:textColor="@color/splashScreenTextColor"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="10dp"/>

        <Button
            android:id="@+id/buttonUyariKitaplar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textViewUyariKitaplar"
            android:layout_centerInParent="true"
            android:textColor="@color/mainTextColor"
            android:text="@string/fragment_kutuphane3"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutKitaplar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"/>

    </RelativeLayout>

</FrameLayout>